--- a/views/overview.pug
+++ b/views/overview.pug
@@ -69,46 +69,46 @@ if(wedding)
       .zn-addon-wrapper(type='announcement-bar')
       .zn-addon-wrapper(type='breakpoints')
       .zn-addon-wrapper(type='custom-css')
-    .nd_options_section.nd_options_background_size_cover(style='background-image:url(http://www.nicdarkthemes.com/themes/wedding/wp/demo/wedding-planner/wp-content/uploads/sites/2/2016/10/img-1.jpg);width:calc(100% / 3)')
-      .nd_options_section.nd_options_bg_greydark_alpha_5
-        .nd_options_section.nd_options_text_align_center
-          .nd_options_section.nd_options_height_100
-          a.nd_options_color_white(rel='' title='' target='' href='#')
-            h1.nd_options_margin_0_important.nd_options_color_white
-              | CERIMONY
-          .nd_options_section.nd_options_height_20
-          h3.nd_options_margin_0_important.nd_options_text_transform_uppercase.nd_options_color_white PLANNING
-          .nd_options_section.nd_options_height_100
-    .wpb_column.vc_column_container.vc_col-sm-4
-      .vc_column-inner
-        .wpb_wrapper
-          // START FOCUS
-          .nd_options_section.nd_options_background_size_cover(style='background-image:url(http://www.nicdarkthemes.com/themes/wedding/wp/demo/wedding-planner/wp-content/uploads/sites/2/2016/10/img-2.jpg);width:calc(100% / 3)')
-            .nd_options_section.nd_options_bg_greydark_alpha_5
-              .nd_options_section.nd_options_text_align_center
-                .nd_options_section.nd_options_height_100
-                h1.nd_options_margin_0_important.nd_options_color_white
-                  | WEDDINGS
-                .nd_options_section.nd_options_height_20
-                h3.nd_options_margin_0_important.nd_options_text_transform_uppercase.nd_options_color_white LOCATIONS
-                .nd_options_section.nd_options_height_100
-          // END FOCUS
-    .wpb_column.vc_column_container.vc_col-sm-4
-      .vc_column-inner
-        .wpb_wrapper
-          // START FOCUS
-          .nd_options_section.nd_options_background_size_cover(style='background-image:url(http://www.nicdarkthemes.com/themes/wedding/wp/demo/wedding-planner/wp-content/uploads/sites/2/2016/10/img-3.jpg);width:calc(100% / 3)')
-            .nd_options_section.nd_options_bg_greydark_alpha_5
-              .nd_options_section.nd_options_text_align_center
-                .nd_options_section.nd_options_height_100
-                h1.nd_options_margin_0_important.nd_options_color_white
-                  | HONEYMOON
-                .nd_options_section.nd_options_height_20
-                h3.nd_options_margin_0_important.nd_options_text_transform_uppercase.nd_options_color_white DESTINATIONS
-                .nd_options_section.nd_options_height_100
-          .parallax-mirror(style='visibility: hidden; z-index: -100; position: fixed; top: 0px; left: 0px; overflow: hidden;')
-            img.parallax-slider(src='')
-          .loader(style='display: none;')
+          //- .nd_options_section.nd_options_background_size_cover(style='background-image:url(http://www.nicdarkthemes.com/themes/wedding/wp/demo/wedding-planner/wp-content/uploads/sites/2/2016/10/img-1.jpg);width:calc(100% / 3)')
+          //-   .nd_options_section.nd_options_bg_greydark_alpha_5
+          //-     .nd_options_section.nd_options_text_align_center
+          //-       .nd_options_section.nd_options_height_100
+          //-       a.nd_options_color_white(rel='' title='' target='' href='#')
+          //-         h1.nd_options_margin_0_important.nd_options_color_white
+          //-           | CERIMONY
+          //-       .nd_options_section.nd_options_height_20
+          //-       h3.nd_options_margin_0_important.nd_options_text_transform_uppercase.nd_options_color_white PLANNING
+          //-       .nd_options_section.nd_options_height_100
+          //- .wpb_column.vc_column_container.vc_col-sm-4
+          //-   .vc_column-inner
+          //-     .wpb_wrapper
+          //-       // START FOCUS
+          //-       .nd_options_section.nd_options_background_size_cover(style='background-image:url(http://www.nicdarkthemes.com/themes/wedding/wp/demo/wedding-planner/wp-content/uploads/sites/2/2016/10/img-2.jpg);width:calc(100% / 3)')
+          //-         .nd_options_section.nd_options_bg_greydark_alpha_5
+          //-           .nd_options_section.nd_options_text_align_center
+          //-             .nd_options_section.nd_options_height_100
+          //-             h1.nd_options_margin_0_important.nd_options_color_white
+          //-               | WEDDINGS
+          //-             .nd_options_section.nd_options_height_20
+          //-             h3.nd_options_margin_0_important.nd_options_text_transform_uppercase.nd_options_color_white LOCATIONS
+          //-             .nd_options_section.nd_options_height_100
+          //-       // END FOCUS
+          //- .wpb_column.vc_column_container.vc_col-sm-4
+          //-   .vc_column-inner
+          //-     .wpb_wrapper
+          //-       // START FOCUS
+          //-       .nd_options_section.nd_options_background_size_cover(style='background-image:url(http://www.nicdarkthemes.com/themes/wedding/wp/demo/wedding-planner/wp-content/uploads/sites/2/2016/10/img-3.jpg);width:calc(100% / 3)')
+          //-         .nd_options_section.nd_options_bg_greydark_alpha_5
+          //-           .nd_options_section.nd_options_text_align_center
+          //-             .nd_options_section.nd_options_height_100
+          //-             h1.nd_options_margin_0_important.nd_options_color_white
+          //-               | HONEYMOON
+          //-             .nd_options_section.nd_options_height_20
+          //-             h3.nd_options_margin_0_important.nd_options_text_transform_uppercase.nd_options_color_white DESTINATIONS
+          //-             .nd_options_section.nd_options_height_100
+          //-       .parallax-mirror(style='visibility: hidden; z-index: -100; position: fixed; top: 0px; left: 0px; overflow: hidden;')
+          //-         img.parallax-slider(src='')
+          //-       .loader(style='display: none;')
           section#couple.section.couple
             .container
               .row
