--- a/views/overview.pug
+++ b/views/overview.pug
@@ -9,11 +9,10 @@ head
   link(href='https://fonts.googleapis.com/css?family=Pacifico%7CWork+Sans:400,300,600,400italic,700%7CAmatic+SC:400,700&subset=latin-ext' rel='stylesheet' type='text/css')
   link(rel='stylesheet' href='https://preview.iwedding.info/templates/template6/css/style.css?v=20220227')
   link(href="https://aancouple.iwedding.info/templates/template5/css/libs.css?v=20220523" rel="stylesheet")
-  link#nd_options_style-css(rel='stylesheet' href='https://www.nicdarkthemes.com/themes/wedding/wp/demo/wedding-planner/wp-content/plugins/nd-shortcodes/css/style.css?ver=5.2.2' type='text/css' media='all')
+  link#nd_options_style-css(rel='stylesheet' href='/css/libs.css' type='text/css' media='all')
   link#nd_options_font_family_h-css(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Cinzel%3A400%2C700&ver=5.2.2' type='text/css' media='all')
   link#nd_options_font_family_p-css(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Halant%3A300%2C400%2C700&ver=5.2.2' type='text/css' media='all')
   link#nd_options_font_family_third-css(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Great+Vibes&ver=5.2.2' type='text/css' media='all')
-  link#nd_tds_style-css(rel='stylesheet' href='https://www.nicdarkthemes.com/themes/wedding/wp/demo/wedding-planner/wp-content/plugins/nd-theme-demos-switcher/css/style.css?ver=5.2.2' type='text/css' media='all')
   link(rel='stylesheet' href='/css/style.css')
   script(type='text/javascript' async='' src='https://www.google-analytics.com/analytics.js')
 if(wedding)
