--- a/views/overview.pug
+++ b/views/overview.pug
@@ -177,7 +177,7 @@ if(wedding)
                         h4
                           strong=`${event.time}  ${event.date}`
                         h4=event.address
-                        a.btn.btn-danger.btn-sm(href=`${event.map}` target='_blank') Xem b&#x1EA3;n &dstrok;&#x1ED3;
+                        a.btn.btn-danger.btn-sm(href=`${event.map}` style='font-size: 1.2rem;background: #fff!important;' target='_blank') Xem b&#x1EA3;n &dstrok;&#x1ED3;
           section#couple-story.section.couple-story.section-gray
             .container
               .row
