--- a/views/overview.pug
+++ b/views/overview.pug
@@ -18,7 +18,7 @@ head
 if(wedding)
   .main
     #nd_options_navigation_2_container.nd_options_section.nd_options_position_relative
-      .nd_options_section(style='background-color: #DDA0DD ; border-bottom: 1px solid #DDA0DD ;')
+      .nd_options_section(style='background-color: rgb(255 97 176); border-bottom: 1px solid #DDA0DD ;')
         .nd_options_container.nd_options_clearfix.nd_options_position_relative
           .nd_options_grid_12.nd_options_display_none_all_responsive
             .nd_options_section(style='height: 4px;')
