--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -286,7 +286,7 @@ block content
               span.badge.rounded-pill.bg-gray-700-soft.mb-4
                 span.h6.fw-bold.text-uppercase B&#x1EAF;t &dstrok;&#x1EA7;u ngay th&ocirc;i n&agrave;o!
               h3.display-4.text-white.fs-1
-                | C&#x1EA3;m &#x1A1;n b&#x1EA1;n v&igrave; &dstrok;&atilde; l&#x1EF1;a ch&#x1ECD;n Behappy !
+                | C&#x1EA3;m &#x1A1;n b&#x1EA1;n v&igrave; &dstrok;&atilde; l&#x1EF1;a ch&#x1ECD;n Biihappy !
               p.fs-lg.text-muted.mb-6.mb-md-8
                 | C&ograve;n ch&#x1EA7;n ch&#x1EEB; g&igrave; n&#x1EEF;a? H&atilde;y t&#x1EB7;ng cho ng&agrave;y c&#x1B0;&#x1EDB;i c&#x1EE7;a b&#x1EA1;n m&#x1ED9;t website
                 | tuy&#x1EC7;t v&#x1EDD;i ngay b&acirc;y gi&#x1EDD; ch&#x1EC9; v&#x1EDB;i v&agrave;i thao t&aacute;c nh&#x1ECF;!
