--- a/template/preview.html
+++ b/template/preview.html
@@ -633,7 +633,7 @@
                                 <p>"Một cuộc hôn nhân thành công đòi hỏi phải yêu nhiều lần, và luôn ở cùng một người" - Chúc cho hai bạn sẽ có được một cuộc hôn nhân viên mãn, trăm năm hạnh phúc!</p>
                             </div>
                                                         <div class="wish-box-item bg">
-                                <strong>CEO của Biihappy (Biiboss)</strong>
+                                <strong>CEO của Behappy (Biiboss)</strong>
                                 <p>"Một cuộc hôn nhân thành công đòi hỏi phải yêu nhiều lần, và luôn ở cùng một người" - Chúc cho hai bạn sẽ có được một cuộc hôn nhân viên mãn, trăm năm hạnh phúc!</p>
                             </div>
                                                     </div>
