--- a/template/wedding/start3bf4.html
+++ b/template/wedding/start3bf4.html
@@ -7,7 +7,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Khởi tạo website đám cưới miễn phí với giao diện &quot;Modern&quot; - Biihappy.com</title>
+<title>Khởi tạo website đám cưới miễn phí với giao diện &quot;Modern&quot; - Behappy.com</title>
 <link rel="icon" type="image/png" href="../../static/favicon/favicon.png" />
 <link rel="preconnect" href="https://fonts.googleapis.com/">
 <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
@@ -21,8 +21,8 @@
 <meta name="twitter:card" content="summary">
 <meta name="twitter:domain" content="../../index.html">
 <meta name="twitter:site" content="biihappy.com">
-<meta property="og:title" content="Khởi tạo website đám cưới miễn phí với giao diện &quot;Modern&quot; - Biihappy.com">
-<meta itemprop="name" content="Khởi tạo website đám cưới miễn phí với giao diện &quot;Modern&quot; - Biihappy.com">
+<meta property="og:title" content="Khởi tạo website đám cưới miễn phí với giao diện &quot;Modern&quot; - Behappy.com">
+<meta itemprop="name" content="Khởi tạo website đám cưới miễn phí với giao diện &quot;Modern&quot; - Behappy.com">
 <meta name="description" content="Chủ đề hướng đến sự trẻ trung, tươi mới và tràn đầy năng lượng của tuổi trẻ. Mang đến cảm phóng khoáng, tự do không theo một khuôn khổ nhất định nào.">
 <meta property="og:description" content="Chủ đề hướng đến sự trẻ trung, tươi mới và tràn đầy năng lượng của tuổi trẻ. Mang đến cảm phóng khoáng, tự do không theo một khuôn khổ nhất định nào.">
 <meta name="twitter:description" content="Chủ đề hướng đến sự trẻ trung, tươi mới và tràn đầy năng lượng của tuổi trẻ. Mang đến cảm phóng khoáng, tự do không theo một khuôn khổ nhất định nào.">
@@ -201,7 +201,7 @@ gtag('config', 'G-P4QBSSV7TG');
 				<div class="col-12 text-center text-gray-700">
 					<div class="d-inline-block">
 						<span>&copy; Copyright 2022</span>,
-						<span>Biihappy cuộc sống mê ly!</span>
+						<span>Behappy cuộc sống mê ly!</span>
 					</div>
 									</div>
 			</div>
