--- a/views/aboutus.pug
+++ b/views/aboutus.pug
@@ -1,34 +1,34 @@
 extend base
 block content
-    section.py-8.py-md-11.border-top
-            .container
-                .row.justify-content-center.mb-7.mb-md-9
-                    .col-12.text-center
-                        h1.display-2
-                            | Gi&#x1EDB;i thi&#x1EC7;u
-                        p.text-muted.text-justify.fs-lg
-                            strong Biihappy
-                            |  h&#x1B0;&#x1EDB;ng &dstrok;&#x1EBF;n vi&#x1EC7;c tr&#x1EDF; th&agrave;nh m&#x1ED9;t n&#x1EC1;n t&#x1EA3;ng m&#x1EA1;ng x&atilde; h&#x1ED9;i truy c&#x1EAD;p mi&#x1EC5;n ph&iacute;. T&#x1EA1;i &dstrok;&acirc;y, b&#x1EA1;n c&oacute; th&#x1EC3; k&#x1EBF;t n&#x1ED1;i, s&#x1EBB; chia v&agrave; lan t&#x1ECF;a nh&#x1EEF;ng &dstrok;i&#x1EC1;u h&#x1EA1;nh ph&uacute;c t&#x1EDB;i m&#x1ECD;i ng&#x1B0;&#x1EDD;i trong cu&#x1ED9;c s&#x1ED1;ng, h&atilde;y c&ugrave;ng Biihappy l&#x1EAF;ng nghe c&#x1EA3;m x&uacute;c, trao g&#x1EED;i y&ecirc;u th&#x1B0;&#x1A1;ng v&agrave; l&agrave;m nhi&#x1EC1;u &dstrok;i&#x1EC1;u h&#x1A1;n th&#x1EBF; n&#x1EEF;a!
-                        h3.text-start.mb-0.fw-bold.text-gray-700 B&#x1EA1;n c&oacute; mu&#x1ED1;n s&#x1EDF; h&#x1EEF;u m&#x1ED9;t website &dstrok;&aacute;m c&#x1B0;&#x1EDB;i mang &dstrok;&#x1EAD;m c&aacute; t&iacute;nh ri&ecirc;ng?
-                        p.text-muted.text-justify.fs-lg
-                            | M&#x1ED9;t trong nh&#x1EEF;ng n&#x1EC1;n t&#x1EA3;ng &dstrok;&#x1EA7;u ti&ecirc;n m&agrave; ch&uacute;ng t&ocirc;i mu&#x1ED1;n mang &dstrok;&#x1EBF;n cho b&#x1EA1;n &dstrok;&oacute; l&agrave;: &quot;
-                            strong N&#x1EC1;n t&#x1EA3;ng t&#x1EA1;o website &dstrok;&aacute;m c&#x1B0;&#x1EDB;i mi&#x1EC5;n ph&iacute;
-                            | &quot;. Biihappy cung c&#x1EA5;p cho c&aacute;c b&#x1EA1;n nh&#x1EEF;ng giao di&#x1EC7;n website tuy&#x1EC7;t &dstrok;&#x1EB9;p, v&#x1EDB;i s&#x1EF1; t&iacute;ch h&#x1EE3;p c&aacute;c t&iacute;nh n&abreve;ng &dstrok;&#x1ED9;c &dstrok;&aacute;o. D&#x1EC5; d&agrave;ng &dstrok;&#x1EC3; b&#x1EA1;n c&oacute; th&#x1EC3; t&#x1EF1; m&igrave;nh t&#x1EA1;o ra &dstrok;&#x1B0;&#x1EE3;c m&#x1ED9;t trang web &dstrok;&aacute;m c&#x1B0;&#x1EDB;i mang d&#x1EA5;u &#x1EA5;n ri&ecirc;ng, v&agrave; gi&#x1EDB;i thi&#x1EC7;u v&#x1EDB;i m&#x1ECD;i ng&#x1B0;&#x1EDD;i m&agrave; kh&ocirc;ng c&#x1EA7;n bi&#x1EBF;t ki&#x1EBF;n th&#x1EE9;c v&#x1EC1; l&#x1EAD;p tr&igrave;nh. N&#x1A1;i b&#x1EA1;n c&oacute; th&#x1EC3; tho&#x1EA3;i m&aacute;i vi&#x1EBF;t l&ecirc;n nh&#x1EEF;ng c&acirc;u chuy&#x1EC7;n t&igrave;nh y&ecirc;u hai &dstrok;&#x1EE9;a, n&#x1A1;i b&#x1EA1;n c&oacute; th&#x1EC3; tr&#x1EF1;c ti&#x1EBF;p nh&#x1EAD;n &dstrok;&#x1B0;&#x1EE3;c v&agrave; l&#x1B0;u gi&#x1EEF; nh&#x1EEF;ng l&#x1EDD;i ch&uacute;c ph&uacute;c t&#x1EEB; b&#x1EA1;n b&egrave; cho d&ugrave; h&#x1ECD; &dstrok;ang &#x1EDF; b&#x1EA5;t k&#x1EF3; &dstrok;&acirc;u, n&#x1A1;i m&agrave; b&#x1EA1;n c&oacute; th&#x1EC3; l&#x1B0;u gi&#x1EEF; v&agrave; chia s&#x1EBB; album h&igrave;nh c&#x1B0;&#x1EDB;i online m&#x1ED9;t c&aacute;ch d&#x1EC5; d&agrave;ng. V&agrave; &dstrok;&#x1EB7;c bi&#x1EC7;t, n&oacute; l&agrave; n&#x1A1;i &dstrok;&#x1EC3; s&#x1EF1; ki&#x1EC7;n tr&#x1ECD;ng &dstrok;&#x1EA1;i c&#x1EE7;a b&#x1EA1;n &dstrok;&#x1B0;&#x1EE3;c l&#x1B0;u gi&#x1EEF; m&atilde;i theo th&#x1EDD;i gian. S&#x1EBD; th&#x1EAD;t tuy&#x1EC7;t v&#x1EDD;i n&#x1EBF;u s&#x1EF1; ki&#x1EC7;n tr&#x1ECD;ng &dstrok;&#x1EA1;i c&#x1EE7;a b&#x1EA1;n &dstrok;&#x1B0;&#x1EE3;c ch&uacute;ng t&ocirc;i l&#x1B0;u gi&#x1EEF; tr&ecirc;n website, v&agrave; b&#x1EA1;n c&oacute; th&#x1EC3; nh&igrave;n l&#x1EA1;i v&agrave; nh&#x1EDB; v&#x1EC1; n&oacute; nh&#x1B0; ch&#x1EC9; m&#x1EDB;i ng&agrave;y h&ocirc;m qua.
-                        h3.text-start.mb-0.fw-bold.text-gray-700 H&atilde;y ch&#x1EDD; &dstrok;&oacute;n ch&uacute;ng t&ocirc;i trong nh&#x1EEF;ng n&#x1EC1;n t&#x1EA3;ng ti&#x1EBF;p theo!
-                        p.text-muted.text-justify.fs-lg
-                            | Tr&#x1EDF; th&agrave;nh m&#x1ED9;t m&#x1EA1;ng x&atilde; h&#x1ED9;i chia s&#x1EBB; &dstrok;i&#x1EC1;u h&#x1EA1;nh ph&uacute;c l&agrave; m&#x1ED9;t m&#x1EE5;c ti&ecirc;u l&#x1EDB;n c&#x1EE7;a ch&uacute;ng t&ocirc;i. Ngo&agrave;i ra, Biihappy v&#x1EAB;n &dstrok;ang x&acirc;y d&#x1EF1;ng m&#x1ED9;t s&#x1ED1; n&#x1EC1;n t&#x1EA3;ng &dstrok;&#x1ED9;c &dstrok;&aacute;o v&agrave; th&uacute; v&#x1ECB;, nh&#x1B0; n&#x1EC1;n t&#x1EA3;ng &quot;T&#x1EA1;o website &dstrok;&aacute;m c&#x1B0;&#x1EDB;i mi&#x1EC5;n ph&iacute;&quot; l&agrave; m&#x1ED9;t v&iacute; d&#x1EE5;. Biihappy h&#x1EE9;a h&#x1EB9;n s&#x1EBD; t&#x1EA1;o ra nh&#x1EEF;ng n&#x1EC1;n t&#x1EA3;ng h&#x1EEF;u &iacute;ch v&agrave; ho&agrave;n to&agrave;n mi&#x1EC5;n ph&iacute;.
-                .row
-                    .col-12
-                        .row.gx-4
-                            .col-4
-                                img.img-fluid.shadow-lg(src='https://biihappy.com/static/img/photos/photo-16.jpg' alt='...')
-                            .col-3
-                                img.img-fluid.shadow-lg.mb-4(src='https://biihappy.com/static/img/photos/photo-17.jpg' alt='...')
-                                img.img-fluid.shadow-lg(src='https://biihappy.com/static/img/photos/photo-18.jpg' alt='...')
-                            .col-5
-                                .row.gx-5.mb-4
-                                    .col-5
-                                        img.img-fluid.shadow-lg(src='https://biihappy.com/static/img/photos/photo-19.jpg' alt='...')
-                                    .col-7
-                                        img.img-fluid.shadow-lg(src='https://biihappy.com/static/img/photos/photo-20.jpg' alt='...')
-                                img.img-fluid.shadow-lg(src='https://biihappy.com/static/img/photos/photo-21.jpg' alt='...')
+  section.py-8.py-md-11.border-top
+    .container
+      .row.justify-content-center.mb-7.mb-md-9
+        .col-12.text-center
+          h1.display-2
+            | Gi&#x1EDB;i thi&#x1EC7;u
+          p.text-muted.text-justify.fs-lg
+            strong Behappy
+            |  h&#x1B0;&#x1EDB;ng &dstrok;&#x1EBF;n vi&#x1EC7;c tr&#x1EDF; th&agrave;nh m&#x1ED9;t n&#x1EC1;n t&#x1EA3;ng m&#x1EA1;ng x&atilde; h&#x1ED9;i truy c&#x1EAD;p mi&#x1EC5;n ph&iacute;. T&#x1EA1;i &dstrok;&acirc;y, b&#x1EA1;n c&oacute; th&#x1EC3; k&#x1EBF;t n&#x1ED1;i, s&#x1EBB; chia v&agrave; lan t&#x1ECF;a nh&#x1EEF;ng &dstrok;i&#x1EC1;u h&#x1EA1;nh ph&uacute;c t&#x1EDB;i m&#x1ECD;i ng&#x1B0;&#x1EDD;i trong cu&#x1ED9;c s&#x1ED1;ng, h&atilde;y c&ugrave;ng Behappy l&#x1EAF;ng nghe c&#x1EA3;m x&uacute;c, trao g&#x1EED;i y&ecirc;u th&#x1B0;&#x1A1;ng v&agrave; l&agrave;m nhi&#x1EC1;u &dstrok;i&#x1EC1;u h&#x1A1;n th&#x1EBF; n&#x1EEF;a!
+          h3.text-start.mb-0.fw-bold.text-gray-700 B&#x1EA1;n c&oacute; mu&#x1ED1;n s&#x1EDF; h&#x1EEF;u m&#x1ED9;t website &dstrok;&aacute;m c&#x1B0;&#x1EDB;i mang &dstrok;&#x1EAD;m c&aacute; t&iacute;nh ri&ecirc;ng?
+          p.text-muted.text-justify.fs-lg
+            | M&#x1ED9;t trong nh&#x1EEF;ng n&#x1EC1;n t&#x1EA3;ng &dstrok;&#x1EA7;u ti&ecirc;n m&agrave; ch&uacute;ng t&ocirc;i mu&#x1ED1;n mang &dstrok;&#x1EBF;n cho b&#x1EA1;n &dstrok;&oacute; l&agrave;: &quot;
+            strong N&#x1EC1;n t&#x1EA3;ng t&#x1EA1;o website &dstrok;&aacute;m c&#x1B0;&#x1EDB;i mi&#x1EC5;n ph&iacute;
+            | &quot;. Behappy cung c&#x1EA5;p cho c&aacute;c b&#x1EA1;n nh&#x1EEF;ng giao di&#x1EC7;n website tuy&#x1EC7;t &dstrok;&#x1EB9;p, v&#x1EDB;i s&#x1EF1; t&iacute;ch h&#x1EE3;p c&aacute;c t&iacute;nh n&abreve;ng &dstrok;&#x1ED9;c &dstrok;&aacute;o. D&#x1EC5; d&agrave;ng &dstrok;&#x1EC3; b&#x1EA1;n c&oacute; th&#x1EC3; t&#x1EF1; m&igrave;nh t&#x1EA1;o ra &dstrok;&#x1B0;&#x1EE3;c m&#x1ED9;t trang web &dstrok;&aacute;m c&#x1B0;&#x1EDB;i mang d&#x1EA5;u &#x1EA5;n ri&ecirc;ng, v&agrave; gi&#x1EDB;i thi&#x1EC7;u v&#x1EDB;i m&#x1ECD;i ng&#x1B0;&#x1EDD;i m&agrave; kh&ocirc;ng c&#x1EA7;n bi&#x1EBF;t ki&#x1EBF;n th&#x1EE9;c v&#x1EC1; l&#x1EAD;p tr&igrave;nh. N&#x1A1;i b&#x1EA1;n c&oacute; th&#x1EC3; tho&#x1EA3;i m&aacute;i vi&#x1EBF;t l&ecirc;n nh&#x1EEF;ng c&acirc;u chuy&#x1EC7;n t&igrave;nh y&ecirc;u hai &dstrok;&#x1EE9;a, n&#x1A1;i b&#x1EA1;n c&oacute; th&#x1EC3; tr&#x1EF1;c ti&#x1EBF;p nh&#x1EAD;n &dstrok;&#x1B0;&#x1EE3;c v&agrave; l&#x1B0;u gi&#x1EEF; nh&#x1EEF;ng l&#x1EDD;i ch&uacute;c ph&uacute;c t&#x1EEB; b&#x1EA1;n b&egrave; cho d&ugrave; h&#x1ECD; &dstrok;ang &#x1EDF; b&#x1EA5;t k&#x1EF3; &dstrok;&acirc;u, n&#x1A1;i m&agrave; b&#x1EA1;n c&oacute; th&#x1EC3; l&#x1B0;u gi&#x1EEF; v&agrave; chia s&#x1EBB; album h&igrave;nh c&#x1B0;&#x1EDB;i online m&#x1ED9;t c&aacute;ch d&#x1EC5; d&agrave;ng. V&agrave; &dstrok;&#x1EB7;c bi&#x1EC7;t, n&oacute; l&agrave; n&#x1A1;i &dstrok;&#x1EC3; s&#x1EF1; ki&#x1EC7;n tr&#x1ECD;ng &dstrok;&#x1EA1;i c&#x1EE7;a b&#x1EA1;n &dstrok;&#x1B0;&#x1EE3;c l&#x1B0;u gi&#x1EEF; m&atilde;i theo th&#x1EDD;i gian. S&#x1EBD; th&#x1EAD;t tuy&#x1EC7;t v&#x1EDD;i n&#x1EBF;u s&#x1EF1; ki&#x1EC7;n tr&#x1ECD;ng &dstrok;&#x1EA1;i c&#x1EE7;a b&#x1EA1;n &dstrok;&#x1B0;&#x1EE3;c ch&uacute;ng t&ocirc;i l&#x1B0;u gi&#x1EEF; tr&ecirc;n website, v&agrave; b&#x1EA1;n c&oacute; th&#x1EC3; nh&igrave;n l&#x1EA1;i v&agrave; nh&#x1EDB; v&#x1EC1; n&oacute; nh&#x1B0; ch&#x1EC9; m&#x1EDB;i ng&agrave;y h&ocirc;m qua.
+          h3.text-start.mb-0.fw-bold.text-gray-700 H&atilde;y ch&#x1EDD; &dstrok;&oacute;n ch&uacute;ng t&ocirc;i trong nh&#x1EEF;ng n&#x1EC1;n t&#x1EA3;ng ti&#x1EBF;p theo!
+          p.text-muted.text-justify.fs-lg
+            | Tr&#x1EDF; th&agrave;nh m&#x1ED9;t m&#x1EA1;ng x&atilde; h&#x1ED9;i chia s&#x1EBB; &dstrok;i&#x1EC1;u h&#x1EA1;nh ph&uacute;c l&agrave; m&#x1ED9;t m&#x1EE5;c ti&ecirc;u l&#x1EDB;n c&#x1EE7;a ch&uacute;ng t&ocirc;i. Ngo&agrave;i ra, Behappy v&#x1EAB;n &dstrok;ang x&acirc;y d&#x1EF1;ng m&#x1ED9;t s&#x1ED1; n&#x1EC1;n t&#x1EA3;ng &dstrok;&#x1ED9;c &dstrok;&aacute;o v&agrave; th&uacute; v&#x1ECB;, nh&#x1B0; n&#x1EC1;n t&#x1EA3;ng &quot;T&#x1EA1;o website &dstrok;&aacute;m c&#x1B0;&#x1EDB;i mi&#x1EC5;n ph&iacute;&quot; l&agrave; m&#x1ED9;t v&iacute; d&#x1EE5;. Behappy h&#x1EE9;a h&#x1EB9;n s&#x1EBD; t&#x1EA1;o ra nh&#x1EEF;ng n&#x1EC1;n t&#x1EA3;ng h&#x1EEF;u &iacute;ch v&agrave; ho&agrave;n to&agrave;n mi&#x1EC5;n ph&iacute;.
+      .row
+        .col-12
+          .row.gx-4
+            .col-4
+              img.img-fluid.shadow-lg(src='https://biihappy.com/static/img/photos/photo-16.jpg' alt='...')
+            .col-3
+              img.img-fluid.shadow-lg.mb-4(src='https://biihappy.com/static/img/photos/photo-17.jpg' alt='...')
+              img.img-fluid.shadow-lg(src='https://biihappy.com/static/img/photos/photo-18.jpg' alt='...')
+            .col-5
+              .row.gx-5.mb-4
+                .col-5
+                  img.img-fluid.shadow-lg(src='https://biihappy.com/static/img/photos/photo-19.jpg' alt='...')
+                .col-7
+                  img.img-fluid.shadow-lg(src='https://biihappy.com/static/img/photos/photo-20.jpg' alt='...')
+              img.img-fluid.shadow-lg(src='https://biihappy.com/static/img/photos/photo-21.jpg' alt='...')
