--- a/views/overview2.pug
+++ b/views/overview2.pug
@@ -509,9 +509,9 @@ if(wedding)
   .bii-footer(style='background-color: #000;border-top:2px solid #df4759;padding: 15px 0;color:#fff;text-align:center;letter-spacing: 1px;')
     .container
       | &star;( &copy; 2022 
-      a(style='color:#fff;' href='https://biihappy.com' target='_blank') Biihappy.com
+      a(style='color:#fff;' href='https://biihappy.com' target='_blank') Behappy.com
       |  | 
-      a(style='color:#fff;' href='https://biihappy.com/vi/wedding' target='_blank') N&#x1EC1;n t&#x1EA3;ng t&#x1EA1;o website &dstrok;&aacute;m c&#x1B0;&#x1EDB;i mi&#x1EC5;n ph&iacute; t&#x1EEB; Biihappy
+      a(style='color:#fff;' href='https://biihappy.com/vi/wedding' target='_blank') N&#x1EC1;n t&#x1EA3;ng t&#x1EA1;o website &dstrok;&aacute;m c&#x1B0;&#x1EDB;i mi&#x1EC5;n ph&iacute; t&#x1EEB; Behappy
       |  )&star;
 script(src='/js/getFirstLetter.js')
 script(src='/js/getTime.js')
