--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -5,17 +5,4 @@ footer.py-5.bg-gray-200.mt-auto
         .d-inline-block
           span &copy; Copyright 2022
           | ,
-          span Biihappy cu&#x1ED9;c s&#x1ED1;ng m&ecirc; ly!
-    .row.mt-2
-      .col-12.text-center
-        ul.menu.text-muted.fw-bold.order-1.justify-content-center
-          li.menu-item
-            a.menu-link.px-2.text-muted(href='about-us.html') Gi&#x1EDB;i thi&#x1EC7;u
-          li.menu-item
-            a.menu-link.px-2.text-muted(href='privacy.html') Ch&iacute;nh s&aacute;ch b&#x1EA3;o m&#x1EAD;t
-          li.menu-item
-            a.menu-link.px-2.text-muted(href='terms.html') &Dstrok;i&#x1EC1;u kho&#x1EA3;n s&#x1EED; d&#x1EE5;ng
-          li.menu-item
-            a.menu-link.px-2.text-muted(href='contact.html') Li&ecirc;n h&#x1EC7;
-          li.menu-item
-            a.menu-link.px-2.text-muted(href='survey.html') &Dstrok;&aacute;nh gi&aacute;
+          span Behappy cu&#x1ED9;c s&#x1ED1;ng m&ecirc; ly!
